--- a/public/manifest.json
+++ b/public/manifest.json
@@ -1,10 +1,15 @@
 {
-  "short_name": "React App",
-  "name": "React Extension",
-  "manifest_version": 2,
-  "browser_action": {
-    "default_popup": "index.html",
-    "default_title": "React Ext"
-  },
-  "version": "1.0"
+	"short_name": "React App",
+	"name": "React Extension",
+	"manifest_version": 2,
+	"icons": {
+		"16": "icon.png",
+		"48": "icon.png",
+		"128": "icon.png"
+	},
+	"browser_action": {
+		"default_popup": "index.html",
+		"default_title": "React Ext"
+	},
+	"version": "1.0"
 }
