--- a/package.json
+++ b/package.json
@@ -3,8 +3,11 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "moment": "^2.22.2",
     "react": "^16.3.0",
+    "react-datepicker": "^1.5.0",
     "react-dom": "^16.3.0",
+    "react-notifications": "^1.4.3",
     "react-scripts": "1.1.1"
   },
   "scripts": {
