--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "moment": "^2.22.2",
     "react": "^16.3.0",
     "react-datepicker": "^1.5.0",
+    "react-day-picker": "^7.1.9",
     "react-dom": "^16.3.0",
     "react-notifications": "^1.4.3",
     "react-scripts": "1.1.1"
